--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -19,6 +19,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webview.js"></script>
+    <script src="js/dynamic-functions.js"></script>
 </body>
 
 </html>
