--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,6 +8,7 @@
     <base href="/" />
     <link href="css/app.min.css" rel="stylesheet" />
     <link href="WpfBlazor.styles.css" rel="stylesheet" />
+    <link href="_content/Microsoft.FluentUI.AspNetCore.Components/css/reboot.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -18,8 +19,10 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script app-name="WpfBlazor" src="./_content/Microsoft.FluentUI.AspNetCore.Components/js/initializersLoader.webview.js"></script>
     <script src="_framework/blazor.webview.js"></script>
     <script src="js/dynamic-functions.js"></script>
+    <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
 </body>
 
 </html>
